# irithyll

./: README.md  pyproject.toml
irithyll/: irithyll.py
tests/: test.py
